# MAST_common

./: .gitattributes  .gitignore  ASI.py  CLAUDE.md  DECISIONS.md  README.md  activities.py  api.py  app.py  ascom.py  asi.py  build_report.py  build_report_api.py  camera.py  canonical.py  components.py  config.py  config_toml.py  const.py  corrections.py  decorators.py  deep.py  dlipowerswitch.py  extended_basemodel.py  filer.py  fswatcher.py  hostname.py  mast_logging.py  networking.py  notifications.py  os_type.py  parsers.py  paths.py  process.py  proxy.py  pyproject.toml  remotes.py  requirements-dev.txt  rois.py  safety.py  (+6 more)
config/: __init__.py  calibration.py  chiller.py  covers.py  focuser.py  greateyes.py  identification.py  imager.py  local.py  local.toml.example  mount.py  network.py  newton.py  phd2.py  power.py  rois.py  shutter.py  site.py  specs.py  stage.py  unit.py  utils.py
docs/: config-toml-role-plan.md
interfaces/: components.py  guiding.py  imager.py  solving.py
lib/: mast-api.sh
models/: assignments.py  batches.py  calibration.py  camera.py  constraints.py  deepspec.py  events.py  greateyes.py  highspec.py  newton.py  plan_scraping.py  plans.py  science.py  spectrographs.py  statuses.py  targets.py  transmited_assignments.py  unit_status.py  workloads.py
mongo_seeds/: makepic.py
targets/: __init__.py  dummy-target.toml  model.py  task.py  template.toml
tasks/: __init__.py  assigned_deepspec_task.toml  assigned_highspec_task.toml  assigned_task.toml  deepspec-task-template.toml  deepspec-task.toml  dummy-target.toml  highspec-task.toml  (+5 more)
(+37 files in other folders)
